many improvements to the app
New issue, when user clicks on text while animating, it stops

Signed-off-by: avi parshan <avi.pars@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="btn_sign_up">Save</string>
     <string name="service_time">Service Time</string>
     <string name="go_back">Change Date</string>
+    <string name="days_left">Days Left</string>
+    <string name="percentage_of_service">% Done</string>
+    <string name="pazam">Days Served</string>
 </resources>
